--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
         <h2>Support This Project</h2>
         <p>If you enjoyed Space Clash 2.0, consider supporting development!</p>
         <div style="display: flex; justify-content: center; align-items: center; flex-direction: column; gap: 12px;">
-          <a href="https://www.buymeacoffee.com/yourUsername" target="_blank" style="display: inline-block; border-radius: 12px; box-shadow: 0 0 16px 2px #ffd70055; background: #222; padding: 8px 16px; transition: box-shadow 0.3s;">
+          <a href="https://buymeacoffee.com/bentleywinstonco" target="_blank" style="display: inline-block; border-radius: 12px; box-shadow: 0 0 16px 2px #ffd70055; background: #222; padding: 8px 16px; transition: box-shadow 0.3s;">
             <img src="https://cdn.buymeacoffee.com/buttons/v2/default-yellow.png" alt="Buy Me A Coffee" style="height: 48px; border-radius: 8px; box-shadow: 0 0 8px #ffd700; margin-bottom: 4px;">
           </a>
           <span style="color: #ffd700; font-size: 16px; font-family: 'Orbitron', 'Courier New', monospace;">Fuel the mission 🚀</span>
