--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
         <h2 style="margin-top:0;">How to Play</h2>
         <ul>
           <li>Move your ship: <b>Arrow keys</b> or <b>A/D</b></li>
-          <li>Shoot: <b>Spacebar</b> or <b>Mouse Click</b></li>
+          <li>Shoot: <b>Spacebar</b> </li>
           <li>Destroy all invaders to advance to the next level</li>
           <li>Hit the bonus ship for extra points!</li>
           <li>The game ends if an invader reaches your ship</li>
